# slot-data-analyzer

./: .gitignore  analyzer.py  app.py  dashboard_generator.py  db_setup.py  debug_scrape.py  index.html  main.py  progress.json  pyproject.toml  requirements.txt  scraper.py  search_test.py  slot_data.db  start.bat
.github/workflows/: auto_update.yml
templates/: dashboard.html
