[project]
name = "slot-data-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "requests>=2.34.2",
]
